i_1169 PR Refactoring requests and comment additions
Add comments to better explain test case indexes.
Add comments to better explain that sendToFeeders means CLICS Event Feeders.
Rename enums to more accurately explain their function: RUN_TESTCASE_RESULT->RUN_TESTCASE_COMPLETED, TESTCASE_RESULT->TESTCASE_COMPLETED.